// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationCard renders VerificationCard 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 22,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Light",
            "fontSize": 14,
            "lineHeight": 19,
          }
        }
      >
        from: 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          testName
        </Text>
      </Text>
      <ExpirationItem
        d={1482354617248}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(33, 37, 45, 1)",
          "flex": 1,
          "paddingTop": 10,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "paddingBottom": 44,
          }
        }
        style={
          Array [
            Object {
              "padding": 15,
            },
            Object {
              "backgroundColor": "rgb(53, 57, 65)",
              "flex": 1,
            },
          ]
        }
      >
        <View>
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "white",
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  Object {
                    "color": "rgba(98, 110, 128, 1)",
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "rgba(33, 37, 45, 1)",
                  "borderRadius": 4,
                  "marginBottom": 15,
                  "marginTop": 5,
                  "shadowColor": "rgb(63,63,63)",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                      "padding": 15,
                    },
                    false,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "alignSelf": "center",
                      "flex": 4,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "white",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        Object {
                          "color": "rgba(98, 110, 128, 1)",
                        },
                      ]
                    }
                  >
                    Employer
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "alignSelf": "center",
                      "flex": 3,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "white",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        Object {
                          "textAlign": "right",
                        },
                      ]
                    }
                  >
                    Consensys AG
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`VerificationCard renders VerificationCard with no issuer 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 22,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Light",
            "fontSize": 14,
            "lineHeight": 19,
          }
        }
      >
        from: 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          0x88647b5a94cd83
        </Text>
      </Text>
      <ExpirationItem
        d={1482354617248}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(33, 37, 45, 1)",
          "flex": 1,
          "paddingTop": 10,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "paddingBottom": 44,
          }
        }
        style={
          Array [
            Object {
              "padding": 15,
            },
            Object {
              "backgroundColor": "rgb(53, 57, 65)",
              "flex": 1,
            },
          ]
        }
      >
        <View>
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "white",
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  Object {
                    "color": "rgba(98, 110, 128, 1)",
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "rgba(33, 37, 45, 1)",
                  "borderRadius": 4,
                  "marginBottom": 15,
                  "marginTop": 5,
                  "shadowColor": "rgb(63,63,63)",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                      "padding": 15,
                    },
                    false,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "alignSelf": "center",
                      "flex": 4,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "white",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        Object {
                          "color": "rgba(98, 110, 128, 1)",
                        },
                      ]
                    }
                  >
                    Employer
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "alignSelf": "center",
                      "flex": 3,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "white",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        Object {
                          "textAlign": "right",
                        },
                      ]
                    }
                  >
                    Consensys AG
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`VerificationCard renders VerificationCard without logo 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 22,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Light",
            "fontSize": 14,
            "lineHeight": 19,
          }
        }
      >
        from: 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          testName
        </Text>
      </Text>
      <ExpirationItem
        d={1482354617248}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(33, 37, 45, 1)",
          "flex": 1,
          "paddingTop": 10,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "paddingBottom": 44,
          }
        }
        style={
          Array [
            Object {
              "padding": 15,
            },
            Object {
              "backgroundColor": "rgb(53, 57, 65)",
              "flex": 1,
            },
          ]
        }
      >
        <View>
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "white",
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  Object {
                    "color": "rgba(98, 110, 128, 1)",
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "rgba(33, 37, 45, 1)",
                  "borderRadius": 4,
                  "marginBottom": 15,
                  "marginTop": 5,
                  "shadowColor": "rgb(63,63,63)",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                      "padding": 15,
                    },
                    false,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "alignSelf": "center",
                      "flex": 4,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "white",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        Object {
                          "color": "rgba(98, 110, 128, 1)",
                        },
                      ]
                    }
                  >
                    Employer
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "alignSelf": "center",
                      "flex": 3,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "white",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        Object {
                          "textAlign": "right",
                        },
                      ]
                    }
                  >
                    Consensys AG
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`VerificationCard renders a connected component as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <VerificationCard
    address="0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9"
    authorizeRequest={[Function]}
    cancelRequest={[Function]}
    issuer={
      Object {
        "address": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
        "name": "0x88647b5a94cd...3a9",
      }
    }
    navigator={
      FakeNavigator {
        "event": [Function],
      }
    }
    removeAttestation={[Function]}
    verification={
      Object {
        "claim": Object {
          "employer": "Consensys AG",
        },
        "exp": 1482354617248,
        "iat": 1482268217248,
        "iss": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
        "sub": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
        "token": "tokenstring",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "padding": 22,
            }
          }
        >
          <Component
            style={
              Object {
                "alignItems": "stretch",
                "flex": 0,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(74,74,74,1)",
                  "fontFamily": "NunitoSans-Light",
                  "fontSize": 14,
                  "lineHeight": 19,
                }
              }
            >
              from: 
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontWeight": "600",
                  }
                }
              >
                0x88647b5a94cd...3a9
              </Text>
            </Text>
            <ExpirationItem
              d={1482354617248}
            />
          </Component>
        </Component>,
        <Component
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <ConectedComponent
            data={
              Object {
                "employer": "Consensys AG",
              }
            }
            navigator={
              FakeNavigator {
                "event": [Function],
              }
            }
          />
        </Component>,
        null,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 0,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 19,
                  }
                }
              >
                from: 
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontWeight": "600",
                    }
                  }
                >
                  0x88647b5a94cd...3a9
                </Text>
              </Text>
              <ExpirationItem
                d={1482354617248}
              />
            </Component>,
            false,
          ],
          "style": Object {
            "backgroundColor": "#FFFFFF",
            "padding": 22,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(74,74,74,1)",
                      "fontFamily": "NunitoSans-Light",
                      "fontSize": 14,
                      "lineHeight": 19,
                    }
                  }
                >
                  from: 
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "fontWeight": "600",
                      }
                    }
                  >
                    0x88647b5a94cd...3a9
                  </Text>
                </Text>,
                <ExpirationItem
                  d={1482354617248}
                />,
              ],
              "style": Object {
                "alignItems": "stretch",
                "flex": 0,
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": Array [
                    "from: ",
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "fontWeight": "600",
                        }
                      }
                    >
                      0x88647b5a94cd...3a9
                    </Text>,
                  ],
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 19,
                  },
                },
                "ref": null,
                "rendered": Array [
                  "from: ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "accessible": true,
                      "allowFontScaling": true,
                      "children": "0x88647b5a94cd...3a9",
                      "ellipsizeMode": "tail",
                      "style": Object {
                        "fontWeight": "600",
                      },
                    },
                    "ref": null,
                    "rendered": "0x88647b5a94cd...3a9",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "d": 1482354617248,
                },
                "ref": null,
                "rendered": null,
                "type": "ExpirationItem",
              },
            ],
            "type": [Function],
          },
          false,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ConectedComponent
            data={
              Object {
                "employer": "Consensys AG",
              }
            }
            navigator={
              FakeNavigator {
                "event": [Function],
              }
            }
          />,
          "style": Object {
            "flex": 1,
            "flexDirection": "column",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "data": Object {
              "employer": "Consensys AG",
            },
            "navigator": FakeNavigator {
              "event": [Function],
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "padding": 22,
              }
            }
          >
            <Component
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 0,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 19,
                  }
                }
              >
                from: 
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontWeight": "600",
                    }
                  }
                >
                  0x88647b5a94cd...3a9
                </Text>
              </Text>
              <ExpirationItem
                d={1482354617248}
              />
            </Component>
          </Component>,
          <Component
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <ConectedComponent
              data={
                Object {
                  "employer": "Consensys AG",
                }
              }
              navigator={
                FakeNavigator {
                  "event": [Function],
                }
              }
            />
          </Component>,
          null,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component
                style={
                  Object {
                    "alignItems": "stretch",
                    "flex": 0,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(74,74,74,1)",
                      "fontFamily": "NunitoSans-Light",
                      "fontSize": 14,
                      "lineHeight": 19,
                    }
                  }
                >
                  from: 
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "fontWeight": "600",
                      }
                    }
                  >
                    0x88647b5a94cd...3a9
                  </Text>
                </Text>
                <ExpirationItem
                  d={1482354617248}
                />
              </Component>,
              false,
            ],
            "style": Object {
              "backgroundColor": "#FFFFFF",
              "padding": 22,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(74,74,74,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 14,
                        "lineHeight": 19,
                      }
                    }
                  >
                    from: 
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "fontWeight": "600",
                        }
                      }
                    >
                      0x88647b5a94cd...3a9
                    </Text>
                  </Text>,
                  <ExpirationItem
                    d={1482354617248}
                  />,
                ],
                "style": Object {
                  "alignItems": "stretch",
                  "flex": 0,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": Array [
                      "from: ",
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "fontWeight": "600",
                          }
                        }
                      >
                        0x88647b5a94cd...3a9
                      </Text>,
                    ],
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(74,74,74,1)",
                      "fontFamily": "NunitoSans-Light",
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    "from: ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "accessible": true,
                        "allowFontScaling": true,
                        "children": "0x88647b5a94cd...3a9",
                        "ellipsizeMode": "tail",
                        "style": Object {
                          "fontWeight": "600",
                        },
                      },
                      "ref": null,
                      "rendered": "0x88647b5a94cd...3a9",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "d": 1482354617248,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "ExpirationItem",
                },
              ],
              "type": [Function],
            },
            false,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ConectedComponent
              data={
                Object {
                  "employer": "Consensys AG",
                }
              }
              navigator={
                FakeNavigator {
                  "event": [Function],
                }
              }
            />,
            "style": Object {
              "flex": 1,
              "flexDirection": "column",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "data": Object {
                "employer": "Consensys AG",
              },
              "navigator": FakeNavigator {
                "event": [Function],
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`VerificationCard renders complex VerificationCard 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 22,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Light",
            "fontSize": 14,
            "lineHeight": 19,
          }
        }
      >
        from: 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          testName
        </Text>
      </Text>
      <ExpirationItem
        d={1482354617248}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(33, 37, 45, 1)",
          "flex": 1,
          "paddingTop": 10,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "paddingBottom": 44,
          }
        }
        style={
          Array [
            Object {
              "padding": 15,
            },
            Object {
              "backgroundColor": "rgb(53, 57, 65)",
              "flex": 1,
            },
          ]
        }
      >
        <View>
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "white",
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  Object {
                    "color": "rgba(98, 110, 128, 1)",
                  },
                  undefined,
                ]
              }
            >
              Identity Verification
            </Text>
            <View
              style={
                Object {
                  "backgroundColor": "rgba(33, 37, 45, 1)",
                  "borderRadius": 4,
                  "marginBottom": 15,
                  "marginTop": 5,
                  "shadowColor": "rgb(63,63,63)",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                      "padding": 15,
                    },
                    Object {
                      "borderBottomColor": "rgba(64, 72, 83, 1)",
                      "borderBottomWidth": 0.5,
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "alignSelf": "center",
                      "flex": 4,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "white",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        Object {
                          "color": "rgba(98, 110, 128, 1)",
                        },
                      ]
                    }
                  >
                    Name
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "alignSelf": "center",
                      "flex": 3,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "white",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        Object {
                          "textAlign": "right",
                        },
                      ]
                    }
                  >
                    Bob Van Duck
                  </Text>
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                      "padding": 15,
                    },
                    false,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "alignSelf": "center",
                      "flex": 4,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "white",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        Object {
                          "color": "rgba(98, 110, 128, 1)",
                        },
                      ]
                    }
                  >
                    Postal Code
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "alignSelf": "center",
                      "flex": 3,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "white",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        Object {
                          "textAlign": "right",
                        },
                      ]
                    }
                  >
                    BH15 12Q
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;
